Hide dropdown for non admins, fixed overflow bug

--- a/client/src/components/ModuleCard.css
+++ b/client/src/components/ModuleCard.css
@@ -1,5 +1,7 @@
 
 .module-box {
+  position: relative;
+  z-index: 0;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -15,6 +17,10 @@
 
   padding: 20px;
   transition: transform 0.15s ease, box-shadow 0.15s ease;
+}
+
+.module-box.open {
+    z-index: 20000;
 }
 
 .module-box:hover {
@@ -50,6 +56,9 @@
 }
 
 .module-info {
+  position: relative;
+  overflow: visible;
+  z-index: 1;
   display: flex;
   background-color: white;
   flex-direction: column;
@@ -222,11 +231,12 @@ module-info:hover {
     font-weight: 300;
     font-size: 20px;
     margin-top: 8px;
+    margin-bottom: 8px;
     border-radius: 15px;
     background-color: #f5f5f5;
     min-width: 100px;
     width: 100%;
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-    z-index: 9999;
+    z-index: 10000;
 }
 }
